--- a/.github/workflows/meme-search-app-full-tests.yml
+++ b/.github/workflows/meme-search-app-full-tests.yml
@@ -23,11 +23,8 @@ jobs:
           bundler-cache: true
           working-directory: meme_search_app
 
-      - name: Update Bundler
-        run: gem install bundler && gem update --system
-
       - name: Scan for common Rails security vulnerabilities using static analysis
-        run: gem update --system && bin/brakeman --no-pager
+        run: bin/brakeman --no-pager
         working-directory: meme_search_app
 
   scan_js:
