--- a/.github/workflows/meme-search-app-full-tests.yml
+++ b/.github/workflows/meme-search-app-full-tests.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-          working-directory: meme_search_app
+          working-directory: ./meme_search_app
 
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
-        working-directory: meme_search_app
+        working-directory: ./meme_search_app
 
   scan_js:
     runs-on: ubuntu-latest
