--- a/.github/workflows/meme-search-app-full-tests.yml
+++ b/.github/workflows/meme-search-app-full-tests.yml
@@ -23,6 +23,12 @@ jobs:
           bundler-cache: true
           working-directory: ./meme_search_app
 
+      - name: Print Ruby version
+        run: ruby -v
+
+      - name: Print Bundler version
+        run: bundle -v
+
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
         working-directory: ./meme_search_app
