--- a/.github/workflows/meme-search-app-full-tests.yml
+++ b/.github/workflows/meme-search-app-full-tests.yml
@@ -16,9 +16,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: update bundler
-        run: bundle update --bundler
-
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
@@ -33,7 +30,7 @@ jobs:
         run: bundle -v
         
       - name: Scan for common Rails security vulnerabilities using static analysis
-        run: bundle exec bin/brakeman --no-pager
+        run: bundle update --bundler && bundle exec bin/brakeman --no-pager
         working-directory: ./meme_search_app
 
   scan_js:
