--- a/meme_search_app/Gemfile
+++ b/meme_search_app/Gemfile
@@ -45,12 +45,12 @@ group :development, :test do
   gem "rubocop-rails-omakase", require: false
 end
 
-group :development, :test do
+group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
 
   # Highlight the fine-grained location where an error occurred [https://github.com/ruby/error_highlight]
-  gem "error_highlight", ">= 0.4.0", platforms: [ :ruby ]
+  # gem "error_highlight", ">= 0.4.0", platforms: [ :ruby ]
 end
 
 group :test do
