--- a/.github/workflows/meme-search-app-full-tests.yml
+++ b/.github/workflows/meme-search-app-full-tests.yml
@@ -78,14 +78,15 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      postgres:
-        image: postgres
+      meme-search-db:
+        image: pgvector/pgvector:pg17
         env:
+          POSTGRES_DB: meme_search_production
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
-        options: --health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="pg_isready -U postgres" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - name: Install packages
