--- a/.github/workflows/docker-build-meme-search-app.yml
+++ b/.github/workflows/docker-build-meme-search-app.yml
@@ -53,5 +53,5 @@ jobs:
           context: ./meme_search_app
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: "tag1" # ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
