--- a/.github/workflows/docker-build-image-to-text-app.yml
+++ b/.github/workflows/docker-build-image-to-text-app.yml
@@ -54,5 +54,5 @@ jobs:
           context: ./image_to_text_app
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: "tag1" # ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
